--- a/TinnRcom.Rcheck/TinnRcom/html/00Index.html
+++ b/TinnRcom.Rcheck/TinnRcom/html/00Index.html
@@ -1,16 +1,17 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head><title>R: Resources of Tinn-R GUI/Editor for R Environment</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link rel="stylesheet" type="text/css" href="R.css">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head><title>R: Resources of Tinn-R GUI/Editor for R Environment</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" type="text/css" href="R.css" />
 </head><body>
 <h1> Resources of Tinn-R GUI/Editor for R Environment
-<img class="toplogo" src="../../../doc/html/logo.jpg" alt="[R logo]">
+<img class="toplogo" src="../../../doc/html/logo.jpg" alt="[R logo]" />
 </h1>
-<hr>
-<div align="center">
-<a href="../../../doc/html/packages.html"><img src="../../../doc/html/left.jpg" alt="[Up]" width="30" height="30" border="0"></a>
-<a href="../../../doc/html/index.html"><img src="../../../doc/html/up.jpg" alt="[Top]" width="30" height="30" border="0"></a>
-</div><h2>Documentation for package &lsquo;TinnRcom&rsquo; version 1.0.17</h2>
+<hr/>
+<div style="text-align: center;">
+<a href="../../../doc/html/packages.html"><img class="arrow" src="../../../doc/html/left.jpg" alt="[Up]" /></a>
+<a href="../../../doc/html/index.html"><img class="arrow" src="../../../doc/html/up.jpg" alt="[Top]" /></a>
+</div><h2>Documentation for package &lsquo;TinnRcom&rsquo; version 1.0.18</h2>
 
 <ul><li><a href="../DESCRIPTION">DESCRIPTION file</a>.</li>
 </ul>
@@ -19,19 +20,19 @@
 
 
 <table width="100%">
-<tr><td width="25%"><a href="TinnRcom.html">TinnRcom-package</a></td>
+<tr><td style="width: 25%;"><a href="TinnRcom.html">TinnRcom-package</a></td>
 <td>Resources of Tinn-R GUI/Editor for R Environment</td></tr>
-<tr><td width="25%"><a href="trArgs.html">trArgs</a></td>
+<tr><td style="width: 25%;"><a href="trArgs.html">trArgs</a></td>
 <td>Show function arguments in a human-readable way</td></tr>
-<tr><td width="25%"><a href="trComplete.html">trComplete</a></td>
+<tr><td style="width: 25%;"><a href="trComplete.html">trComplete</a></td>
 <td>Get a completion list for a R code fragment</td></tr>
-<tr><td width="25%"><a href="trExport.html">trExport</a></td>
+<tr><td style="width: 25%;"><a href="trExport.html">trExport</a></td>
 <td>Export the content of an object in a foreign format</td></tr>
-<tr><td width="25%"><a href="trObjBrowse.html">trObjList</a></td>
+<tr><td style="width: 25%;"><a href="trObjBrowse.html">trObjList</a></td>
 <td>Functions to implement the an object browser (R explorer) in Tinn-R</td></tr>
-<tr><td width="25%"><a href="trObjBrowse.html">trObjSearch</a></td>
+<tr><td style="width: 25%;"><a href="trObjBrowse.html">trObjSearch</a></td>
 <td>Functions to implement the an object browser (R explorer) in Tinn-R</td></tr>
-<tr><td width="25%"><a href="trPaths.html">trPaths</a></td>
+<tr><td style="width: 25%;"><a href="trPaths.html">trPaths</a></td>
 <td>Short paths to Tinn-R Editor</td></tr>
 </table>
 </body></html>
